--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -15,8 +16,9 @@
 <!--<input type="hidden" id="questionIndex" value="">-->
 <section class="d-flex justify-content-center align-items-center vh-100" id="startExam">
     <div class="card shadow-lg mx-auto border-0 rounded-4 w-75 h-75 ">
-        <div class="card-body w-100 d-flex align-items-center justify-content-center">
-            <button class="fs-4 w-25 h-25" id="startButton">Start exam</button>
+        <div class="card-body w-100 d-flex flex-column align-items-center justify-content-center">
+                <h1 class="mb-5"> Welcome to your Examination platform  </h1>
+                <button class="fs-4 w-25 h-25" id="startButton">Start Exam Now</button>
         </div>
     </div>
 </section>
@@ -51,7 +53,7 @@
             </div>
         </div>
     </div>
-    
+
 </section>
 <section class="d-flex justify-content-center align-items-center d-none vh-100" id="examResult">
     <div class="card shadow-lg mx-auto border-0 pb-5 rounded-4 w-75 ">
@@ -62,12 +64,11 @@
 </section>
 
 
-
 <script defer src="assets/js/main.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/1.0.1/progressbar.min.js"></script>
 
 </body>
