--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Examination System</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+CO+Guides&display=swap" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
     <link
-            rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+            rel="stylesheet"
     />
 
     <link href="assets/css/style.css" rel="stylesheet">
@@ -20,21 +20,29 @@
 
 <!--<input type="hidden" id="questionIndex" value="">-->
 <section class="d-flex justify-content-center align-items-center vh-100" id="startExam">
-    <div class="card shadow-lg mx-auto border-0 rounded-4 w-75 h-75 ">
+    <div class="card shadow-lg mx-auto border-0 rounded-4 w-75 h-75 animate__animated animate__fadeIn ">
         <div class="card-body w-100 d-flex flex-column align-items-center justify-content-center">
-                <h1 class="mb-5"> Welcome to your Examination platform  </h1>
-                <button class="fs-4 w-25 h-25" id="startButton">Start Exam Now</button>
+            <h1 class="mb-5 text-center fw-bold "> Welcome to your Examination platform </h1>
+            <p class="mb-4 text-muted" style="color: white">Are you ready to begin your assessment?</p>
+
+            <button class="fs-4 w-25 h-25 btn-lg px-5 py-3 animate__animated animate__pulse animate__infinite" id="startButton">Start The Exam</button>
         </div>
     </div>
 </section>
 
 
+
 <section class="d-none h-75" id="examPage">
     <div class="container-fluid  d-flex flex-column p-2">
         <div class="card shadow-lg mx-auto flex-grow-1 border-0 rounded-4 w-75" id="exam">
-            <div class="card-body p-3">
-                <h2 class="text-center " id="stName">Hi , </h2>
+            <div class="card-body mt-1 px-3">
+                    <div class="d-flex justify-content-between align-items-center mb-3" id="questionCounter">
+                        <h2 class="mb-2 h5" id="stName">Welcome, Student</h2>
+                        <h2 class="mb-2 h5">Question: <span id="currentQuestion">1</span>/<span id="totalQuestions">10</span></h2>
+                    </div>
+
                 <hr class="custom-line">
+
                 <div class="d-flex justify-content-end mb-3" id="timerBar">
                 </div>
 
@@ -43,8 +51,8 @@
                         solve</h2>
 
                     <div class="text-center mb-3">
-                        <img alt="Question image" class="img-fluid rounded-3" id="questionImage"
-                             src="assets/images/img.png">
+                        <img alt="Question image" class="rounded mx-auto d-block" id="questionImage"
+                             src="">
                     </div>
 
                     <div class="d-grid gap-2" id="answersContainer">
@@ -77,7 +85,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/1.0.1/progressbar.min.js"></script>
 
 </body>
-
 
 
 </html>
