--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="card shadow-lg mx-auto border-0 rounded-4 w-75 h-75 animate__animated animate__fadeIn ">
         <div class="card-body w-100 d-flex flex-column align-items-center justify-content-center">
             <h1 class="mb-5 text-center fw-bold "> Welcome to your Examination platform </h1>
-            <p class="mb-4 text-muted" style="color: white">Are you ready to begin your assessment?</p>
+            <p class="mb-4 text-muted fw-bold fs-4">Are you ready to begin your assessment?</p>
 
             <button class="fs-4 w-25 h-25 btn-lg px-5 py-3 animate__animated animate__pulse animate__infinite" id="startButton">Start The Exam</button>
         </div>
