--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="card shadow-lg mx-auto flex-grow-1 border-0 rounded-4 w-75" id="exam">
             <div class="card-body mt-1 px-3">
                     <div class="d-flex justify-content-between align-items-center mb-3" id="questionCounter">
-                        <h2 class="mb-2 h5" id="stName">Welcome, Student</h2>
+                        <h2 class="mb-2 h5" id="stName">Welcome, </h2>
                         <h2 class="mb-2 h5">Question: <span id="currentQuestion">1</span>/<span id="totalQuestions">10</span></h2>
                     </div>
 
